--- a/src/pages/test/test1/test1.html
+++ b/src/pages/test/test1/test1.html
@@ -7,12 +7,81 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Test1</ion-title>
+    <ion-title class="badge-container">Test1</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="presentToast()">
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <i icon ion-home badge-container><span badge badge-assertive>3</span></i>
+  <ion-item>
+    <ion-icon name="logo-twitter" item-start></ion-icon>
+    Followers
+    <ion-badge item-end>260k</ion-badge>
+    <ion-badge item-top>0</ion-badge>
+  </ion-item>
+  <ion-content>
+    <!-- Real floating action button, fixed. It will not scroll with the content -->
+    <ion-fab top right edge>
+      <button ion-fab mini><ion-icon name="add"></ion-icon></button>
+      <ion-fab-list>
+        <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+        <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+        <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+        <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+      </ion-fab-list>
+    </ion-fab>
 
+    <ion-fab right bottom>
+      <button ion-fab color="light"><ion-icon name="arrow-dropleft"></ion-icon></button>
+      <ion-fab-list side="left">
+        <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+        <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+        <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+        <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+      </ion-fab-list>
+    </ion-fab>
+    <i class="icon ion-ios-person positive">
+    <span class="icon icon-badge-rb ion-ios-checkmark-outline">222</span>
+</i>
+  </ion-content>
+  <ion-slides pager>
+
+    <ion-slide>
+      <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+      <ion-list>
+        <ion-item *ngFor="let item of itemsCopy">
+          {{ item }}
+        </ion-item>
+      </ion-list>
+    </ion-slide>
+
+    <ion-slide style="background-color: blue">
+      <h2>Slide 2</h2>
+    </ion-slide>
+
+    <ion-slide style="background-color: red">
+      <h2>Slide 3</h2>
+    </ion-slide>
+
+  </ion-slides>
+  <ion-list>
+    <ion-item>
+      Left Icon Button
+      <button ion-button outline item-end icon-left class="fab-btn">
+      <ion-icon name="star"></ion-icon>
+      Left Icon
+    </button>
+    </ion-item>
+  </ion-list>
+  <ion-item>
+    <ion-label> Sam</ion-label>
+    <ion-toggle disabled checked="false"></ion-toggle>
+  </ion-item>
 </ion-content>
