--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,23 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>微信</ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="presentPopover($event)">
+                <ion-icon name="add"></ion-icon>
+            </button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
-
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content padding class="list-avatar-page">
+    <ion-searchbar (ionInput)="getUsers($event)"></ion-searchbar>
+    <ion-list *ngFor="let user of userList">
+        <ion-item (click)="pagination()">
+            <ion-thumbnail item-left>
+                <img src="{{user.imgPath}}">
+            </ion-thumbnail>
+            <h2>{{user.name}}</h2>
+            <p>{{user.addr}}</p>
+            <ion-note item-right>3:43 pm</ion-note>
+        </ion-item>
+    </ion-list>
 </ion-content>
