--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -14,5 +14,6 @@
 
 
 <ion-content padding>
-    <button ion-button block class="fab-btn" (click)="toPage1()">11</button>
+  <h2>child {{content}}</h2>
+  <button ion-button block class="fab-btn" (click)="toPage1()">11</button>
 </ion-content>
