--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,4 @@
 <ion-tabs>
-  <ion-tab *ngFor="let tabRoot of tabRoots" [root]="tabRoot.root" tabTitle="{{tabRoot.tabTitle}}" tabIcon="{{tabRoot.tabIcon}}" [tabsHideOnSubPages]="true"></ion-tab>
+  <ion-tab *ngFor="let tabRoot of tabRoots" [root]="tabRoot.root" tabBadgeStyle="danger" [tabBadge]="tabRoot.attrName"  tabTitle="{{tabRoot.tabTitle}}" tabIcon="{{tabRoot.tabIcon}}" [tabsHideOnSubPages]="true"></ion-tab>
 </ion-tabs>
+                
