--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,14 +7,12 @@
 <ion-content padding >
     <ion-searchbar [(ngModel)]="search"></ion-searchbar>
 
-    <ion-list *ngFor="let user of userList|filterUser:search">
-        <ion-item (click)="toOrders(user)">
+<button ion-item (click)="toOrders(user)" *ngFor="let user of userList|filterUser:search">
             <ion-thumbnail item-left>
                 <img src="{{user.imgPath}}">
             </ion-thumbnail>
             <ion-badge item-top style="background-color: red;">{{homeObj.attrName}}</ion-badge>
             <p>{{user.name}}</p>
             <p>{{user.addr}}</p>
-        </ion-item>
-    </ion-list>
+        </button>
 </ion-content>
