--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -1,19 +1,23 @@
-<!--
-  Generated template for the Test2Page page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>testsetsetet</ion-title>
-  </ion-navbar>
-
+  <ion-toolbar>
+    <ion-title>
+      设置个人头像
+    </ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+            <span showWhen="ios">关闭</span>
+            <ion-icon name="md-close" showWhen="android,windows,landscape"></ion-icon>
+          </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
+<ion-content padding text-center>
 
-<ion-content padding>
-  <h2>child {{content}}</h2>
-  <button ion-button block class="fab-btn" (click)="toPage1()">11</button>
+  <img [src]="imgSrc" style="display: block; width: 200px; height: 150px;">
+  <input type="file" capture="camera" accept="image/*" (change)="uploadDown($event)">
+
+
+
+
 </ion-content>
