--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -13,19 +13,15 @@
   <div style="  margin-top: 10px;
     margin-left: 10px;">
     <div>
-      <textarea placeholder="进度描述……" rows="3"></textarea><hr/>
-    </div>
-    <div *ngFor="let item of thumb;let i = index" style="float:left">
-      <div id="a1">
-        <img [src]="item" style="width:60px;height:60px;background-size: cover;" />
-      </div>
-      <div class="divafter" (click)="img_del(i)">X</div>
+      <textarea placeholder="进度描述……" rows="3"></textarea>
+      <hr/>
     </div>
 
 
-    <div class="file">
-      <input type="file" name="" id="" (change)="img_upload($event)">
+    
+    <div padding-vertical>
+      <page-select-pic [max]="6" [(fileObjList)]="fileObjList"></page-select-pic>
     </div>
-    <hr/>  
+    <hr/>
   </div>
 </ion-content>
