--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -11,6 +12,8 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+  <link rel="stylesheet" href="./assets/lib/swiper-3.4.2.min.css">
+  <script src="./assets/lib/swiper-3.4.2.min.js"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -26,6 +29,7 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Ionic's root component and where the app will load -->
@@ -42,4 +46,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
