--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -39,15 +39,11 @@
 
     <ion-item>
 
-      <div class="imgDiv"><img src="assets/img/jiahao.png"></div>
-      <div class="imgDiv"><img src="assets/img/avatar-ts-buzz.jpg"></div>
-      <div class="imgDiv"><img src="assets/img/logo.jpg"></div>
-      <div class="imgDiv"><img src="assets/img/avatar-ts-woody.png"></div>
+     <div padding-vertical>
+      <page-select-pic [max]="6" [allowDelete]="false" [allowAdd]="false" [(fileObjList)]="fileObjList" ></page-select-pic>
+    </div>
 
-      <div class="imgDiv"><img src="assets/img/avatar-ts-buzz.jpg"></div>
-      <div class="imgDiv"><img src="assets/img/avatar-ts-woody.png"></div>
-      <div class="imgDiv"><img src="assets/img/logo.jpg"></div>
-      <div class="imgDiv"><img src="assets/img/jiahao.png"></div>
+
 
 
     </ion-item>
