--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,10 +8,10 @@
     <ion-searchbar [(ngModel)]="search"></ion-searchbar>
 
         <button ion-item (click)="toOrders(user)" *ngFor="let user of userList|filterUser:search">
-             <ion-avatar item-start>
+                <ion-avatar item-start>
                     <img src="{{user.imgPath}}">
                 </ion-avatar>
-            <p><ion-badge item-top style="background-color: red;">{{homeObj.attrName}}</ion-badge>{{user.name}}</p>
+            <p>{{user.name}}<ion-badge item-right style="background-color: red;">{{homeObj.attrName}}</ion-badge></p>
             <p>{{user.addr}}</p>
         </button>
 
