--- a/src/pages/home/new-schedule/new-schedule.html
+++ b/src/pages/home/new-schedule/new-schedule.html
@@ -16,9 +16,14 @@
   <div style="  margin-top: 10px;
     margin-left: 10px;">
     <div>
-      <textarea placeholder="进度描述……" rows="3"></textarea><hr/>
+      <textarea placeholder="进度描述……"  [(ngModel)]="describe"  rows="3">{{describe}}</textarea><hr/>
     </div>
-    <div *ngFor="let item of thumb;let i = index" style="float:left">
+
+     <div padding-vertical>
+        <page-select-pic [max]="8"   [(fileObjList)]="fileObjList"></page-select-pic>
+      </div>
+    <!-- 这里是我自己定义的img空间 -->
+    <!-- <div *ngFor="let item of thumb;let i = index" style="float:left">
       <div id="a1">
         <img [src]="item" style="width:60px;height:60px;background-size: cover;" />
       </div>
@@ -28,7 +33,7 @@
 
     <div class="file">
       <input type="file" name="" id="" (change)="img_upload($event)">
-    </div>
+    </div> -->
     <hr/>  
   </div>
 </ion-content>
