--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,43 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      我的
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="bg-color">
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-item >
+      <ion-avatar item-left >
+        <img src="assets/img/lishuo.png">
+      </ion-avatar>
+      <h2>李硕</h2>
+      <p>word硕</p>
+      <ion-icon name='ios-arrow-forward' item-right></ion-icon>
+    </ion-item>
+  </ion-list>
+  <ion-list>
     <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
-      @ionicframework
+      <ion-icon name="settings" item-left color="primary"></ion-icon>
+      设置
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-item hideWhen="ios">
+	  <ion-icon name="log-out" item-left color="danger"></ion-icon>
+      退出软件
+    </ion-item>
+    <ion-item >
+      <ion-icon name="log-in" item-left color="danger"></ion-icon>
+      重新登录
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-item >
+      <ion-icon name="information-circle" item-left  color="secondary"></ion-icon>
+      关于
+      <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
