--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -7,11 +7,11 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{userOrder.name}}</ion-title>
+    <ion-title>{{userOrder.name?userOrder.name:'所有进度'}}</ion-title>
 
     <ion-buttons end>
       <button ion-button icon-only (click)="newSchedule()">
-                <ion-icon name="add"></ion-icon>
+                <ion-icon *ngIf="userOrder.name" name="add"></ion-icon>
             </button>
     </ion-buttons>
   </ion-navbar>
