--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>登录</ion-title>
+    <ion-title>悦家智能家居</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -13,11 +13,11 @@
     <ion-label fixed>密码</ion-label>
     <ion-input type="password" placeholder="请输入密码" #password></ion-input>
   </ion-item>
-  <ion-item no-lines>
+  <!-- <ion-item no-lines>
     <label item-right>记住密码</label>
     <ion-toggle></ion-toggle>
-  </ion-item>
-
+  </ion-item> -->
+<br/><br/><br/>
   <div style="text-align: center; margin-left: 30px; margin-right: 30px;">
     <button ion-button block color="danger" (click)="logIn(username, password)">
       登录
