--- a/src/pages/home/user-list-orders/user-list-orders.html
+++ b/src/pages/home/user-list-orders/user-list-orders.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <button ion-item *ngFor="let userOrder of userOrders|filterUser:search"  (click)="toOrderInfo(userOrder)">
-      <p>{{userOrder.name}}</p>
+      <p>{{userOrder.name}}<ion-badge item-right style="background-color: red;">{{homeObj.attrName}}</ion-badge></p>
       <p>{{userOrder.addr}}</p>
   </button>
 </ion-content>
