--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -10,6 +10,20 @@
 </ion-header>
 
 <ion-content>
+
+ <ion-list>
+   <ion-item *ngFor="let item of items;let i=index;">
+
+    <p>{{i}}</p>
+   </ion-item>
+ </ion-list>
+
+ <ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
+   <ion-infinite-scroll-content></ion-infinite-scroll-content>
+ </ion-infinite-scroll>
+
+
+ <br/> <br/> <br/> <br/> <br/> <br/>
   <div style="  margin-top: 10px;
     margin-left: 10px;">
     <div>
