--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -11,33 +11,87 @@
 
 <ion-content>
 
- <ion-list>
-   <ion-item *ngFor="let item of items;let i=index;">
+  <div>
+    <ion-card>
+      <a></a>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="assets/img/marty-avatar.png">
+        </ion-avatar>
+        <h2>22222222222</h2>
+        <p>11111111111111111</p>
+      </ion-item>
+      <ion-card-content>
+        <p>4444444444444444</p>
+      </ion-card-content>
 
-    <p>{{i}}</p>
-   </ion-item>
- </ion-list>
-
- <ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
-   <ion-infinite-scroll-content></ion-infinite-scroll-content>
- </ion-infinite-scroll>
+      <ion-item>
 
 
- <br/> <br/> <br/> <br/> <br/> <br/>
+
+
+      </ion-item>
+
+
+      <ion-row>
+
+        <ion-col>
+          <button ion-button icon-left clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>12 Likes</div>
+      </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button icon-left clear small>
+        <ion-icon name="text"></ion-icon>
+        <div>4 Comments</div>
+      </button>
+        </ion-col>
+        <ion-col center text-center>
+          <ion-note>
+            11h ago
+          </ion-note>
+        </ion-col>
+
+        <div class="cmt-wrap">
+          <div class="cmt-list">
+            <p><span>wu世勋-EXO：</span>나는 서명～</p>
+            <p><span>鹿晗：</span>我们在国内冻成狗，我也想跟哥您去热热～</p>
+            <p><span>权志龙：</span>나는 서명～</p>
+            <p><span>王思聪：</span>去哪玩啊？那么爽</p>
+            <p>
+              <span class="data-name">万虎科技~贾素杰</span> 回复
+              <span>
+                                            王思聪
+                                        </span>
+              <span>
+                                            ：
+                                        </span> 澳洲大堡礁，这边刚好是夏季，挺适合避寒的。
+            </p>
+            <p><span>杨幂：</span>😘私人飞机出行，求带上我～</p>
+          </div>
+        </div>
+      </ion-row>
+
+    </ion-card>
+  </div>
+
+
+  <br/> <br/> <br/> <br/> <br/> <br/>
   <div style="  margin-top: 10px;
     margin-left: 10px;">
     <div>
-      <textarea placeholder="进度描述……" rows="3"></textarea>
+      <textarea placeholder="333" rows="3"></textarea>
       <hr/>
     </div>
 
-    <div class="imgBadge" txt="X"><img src="assets/img/avatar-ts-jessie.png" alt=""/></div>
+    <div class="imgBadge" txt="X"><img src="assets/img/avatar-ts-jessie.png" alt="" /></div>
 
     <div padding-vertical>
       <page-select-pic [max]="6" [(fileObjList)]="fileObjList"></page-select-pic>
     </div>
-    <hr/>                 
-  </div>                   
+    <hr/>
+  </div>
 
   <ion-icon class="icons-star" *ngFor="let star of stars;let n = index" name='star' [isActive]="star" (click)="toChange(n)"></ion-icon>
 </ion-content>
