--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -55,20 +55,10 @@
 
         <div class="cmt-wrap">
           <div class="cmt-list">
-            <p><span>wu世勋-EXO：</span>나는 서명～</p>
-            <p><span>鹿晗：</span>我们在国内冻成狗，我也想跟哥您去热热～</p>
-            <p><span>权志龙：</span>나는 서명～</p>
-            <p><span>王思聪：</span>去哪玩啊？那么爽</p>
-            <p>
-              <span class="data-name">万虎科技~贾素杰</span> 回复
-              <span>
-                                            王思聪
-                                        </span>
-              <span>
-                                            ：
-                                        </span> 澳洲大堡礁，这边刚好是夏季，挺适合避寒的。
+            <p><span >万虎科技~贾素杰</span> 回复
+              <span>王思聪</span>
+              <span>：</span> 澳洲大堡礁，这边刚好是夏季，挺适合避寒的。
             </p>
-            <p><span>杨幂：</span>😘私人飞机出行，求带上我～</p>
           </div>
         </div>
       </ion-row>
