--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,19 +7,19 @@
 </ion-header>
 
 <ion-content padding>
-<div padding>
+<div padding=50px>
   <ion-segment [(ngModel)]="pet">
     <ion-segment-button value="kittens">
-      全部订单
+      工程进度
     </ion-segment-button>
     <ion-segment-button value="puppies">
-      进行中
+      完工订单
     </ion-segment-button>
      <ion-segment-button value="aaaa">
-      已完成
+      待评价
     </ion-segment-button>
     <ion-segment-button value="4444">
-      待评价
+      订单详情
     </ion-segment-button>
   </ion-segment>
 </div>
