--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item >
       <ion-avatar item-left >
-        <img src="assets/img/lishuo.png">
+        <img src="assets/img/avatar-ts-buzz.png">
       </ion-avatar>
       <h2>李硕</h2>
       <p>word硕</p>
