--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -1,73 +1,88 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      发表进度
+      客户小甜甜
     </ion-title>
-    <ion-buttons start>
 
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <div>
-    <ion-card>
-      <a></a>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="assets/img/marty-avatar.png">
-        </ion-avatar>
-        <h2>22222222222</h2>
-        <p>11111111111111111</p>
-      </ion-item>
-      <ion-card-content>
-        <p>4444444444444444</p>
-      </ion-card-content>
+    <div class="main">  
+        <div class="main_inner clearfix">  
+            <div class="panel"></div>  
+            <div id="chatArea" class="box chat">  
+                <div class="box_hd"></div>  
+                <div class="box_bd" id="messageList">  
+                    <div class="message me">  
+                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
+                        <div class="content">  
+                            <div class="nickname"><span class="time">10:10:08</span></div>  
+                            <div class="bubble bubble_primary right">  
+                                <div class="bubble_cont">  
+                                    <div class="plain">  
+                                        <pre>你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐</pre>  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div>  
+                    <div class="message">  
+                        <img class="avatar" src="assets/img/kh.jpg" />  
+                        <div class="content">  
+                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
+                            <div class="bubble bubble_default left">  
+                                <div class="bubble_cont">  
+                                    <div class="plain">  
+                                        <pre>(⊙o⊙)…好吧</pre>  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div>  
+                    <div >  
+                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
+                        <div class="content">  
+                            <div class="nickname"><span class="time">10:10:08</span></div>  
+                            <div class="bubble bubble_primary right no_arrow">  
+                                <div class="bubble_cont">  
+                                    <div class="picture">  
+                                        <img class="msg-img" src="images/p1.png">  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div>  
+                    <div class="message">  
+                        <img class="avatar" src="assets/img/kh.jpg" />  
+                        <div class="content">  
+                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
+                            <div class="bubble bubble_default left">  
+                                <div class="bubble_cont">  
+                                    <div class="plain">  
+                                        <pre>请你吃一个月大餐！</pre>  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div>  
+  
+                </div>  
+                <div class="box_ft">   
+                    <div class="box_ft_hd">  
+                        <div class="eaitWrap">  
+                    
+                            <ion-input class="editArea" id="input{{i}}" [(ngModel)]="teststr"   type="text" placeholder="回复内容…" ></ion-input>  
+                        </div>  
+                       
+                    </div>  
+                </div>  
+            </div>  
+        </div>  
+    </div>  
 
-      <ion-item>
-
-
-
-
-      </ion-item>
-
-
-      <ion-row>
-
-        <ion-col>
-          <button ion-button icon-left clear small>
-        <ion-icon name="thumbs-up"></ion-icon>
-        <div>12 Likes</div>
-      </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button icon-left clear small>
-        <ion-icon name="text"></ion-icon>
-        <div>4 Comments</div>
-      </button>
-        </ion-col>
-        <ion-col center text-center>
-          <ion-note>
-            11h ago
-          </ion-note>
-        </ion-col>
-
-        <div class="cmt-wrap">
-          <div class="cmt-list">
-            <p><span >万虎科技~贾素杰</span> 回复
-              <span>王思聪</span>
-              <span>：</span> 澳洲大堡礁，这边刚好是夏季，挺适合避寒的。
-            </p>
-          </div>
-        </div>
-      </ion-row>
-
-    </ion-card>
-  </div>
-
-
-  <br/> <br/> <br/> <br/> <br/> <br/>
+  <!-- <br/> <br/> <br/> <br/> <br/> <br/>
   <div style="  margin-top: 10px;
     margin-left: 10px;">
     <div>
@@ -83,5 +98,5 @@
     <hr/>
   </div>
 
-  <ion-icon class="icons-star" *ngFor="let star of stars;let n = index" name='star' [isActive]="star" (click)="toChange(n)"></ion-icon>
+  <ion-icon class="icons-star" *ngFor="let star of stars;let n = index" name='star' [isActive]="star" (click)="toChange(n)"></ion-icon> -->
 </ion-content>
