--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -41,7 +41,7 @@
                             </div>  
                         </div>  
                     </div>  
-                    <div >  
+                    <div class="message me">  
                         <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
                         <div class="content">  
                             <div class="nickname"><span class="time">10:10:08</span></div>  
