--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -41,6 +41,58 @@
                             </div>  
                         </div>  
                     </div>  
+                                        <div class="message me">  
+                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
+                        <div class="content">  
+                            <div class="nickname"><span class="time">10:10:08</span></div>  
+                            <div class="bubble bubble_primary right no_arrow">  
+                                <div class="bubble_cont">  
+                                    <div class="picture">  
+                                        <img class="msg-img" src="images/p1.png">  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div>  
+                    <div class="message">  
+                        <img class="avatar" src="assets/img/kh.jpg" />  
+                        <div class="content">  
+                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
+                            <div class="bubble bubble_default left">  
+                                <div class="bubble_cont">  
+                                    <div class="plain">  
+                                        <pre>请你吃一个月大餐！</pre>  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div> 
+                                        <div class="message me">  
+                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
+                        <div class="content">  
+                            <div class="nickname"><span class="time">10:10:08</span></div>  
+                            <div class="bubble bubble_primary right no_arrow">  
+                                <div class="bubble_cont">  
+                                    <div class="picture">  
+                                        <img class="msg-img" src="images/p1.png">  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div>  
+                    <div class="message">  
+                        <img class="avatar" src="assets/img/kh.jpg" />  
+                        <div class="content">  
+                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
+                            <div class="bubble bubble_default left">  
+                                <div class="bubble_cont">  
+                                    <div class="plain">  
+                                        <pre>请你吃一个月大餐！</pre>  
+                                    </div>  
+                                </div>  
+                            </div>  
+                        </div>  
+                    </div> 
                     <div class="message me">  
                         <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
                         <div class="content">  
