--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -55,9 +55,9 @@
       </button>
       </ion-col>
       <ion-col>
-        <button ion-button icon-left clear small>
+        <button ion-button icon-left clear small (click)="toScheduleComplaint()">
         <ion-icon name="text"></ion-icon>
-        <div>4 Comments</div>
+        <div>投诉</div>
       </button>
       </ion-col>
       <ion-col center text-center>
