--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      我的订单
+    我的家
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -13,14 +13,12 @@
       工程进度
     </ion-segment-button>
     <ion-segment-button value="puppies">
-      完工订单
+      档案
     </ion-segment-button>
      <ion-segment-button value="aaaa">
-      待评价
+      售后
     </ion-segment-button>
-    <ion-segment-button value="4444">
-      订单详情
-    </ion-segment-button>
+
   </ion-segment>
 </div>
 
