--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -9,131 +9,45 @@
 
 <ion-content>
 
-    <div class="main">  
-        <div class="main_inner clearfix">  
-            <div class="panel"></div>  
-            <div id="chatArea" class="box chat">  
-                <div class="box_hd"></div>  
-                <div class="box_bd" id="messageList">  
-                    <div class="message me">  
-                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
-                        <div class="content">  
-                            <div class="nickname"><span class="time">10:10:08</span></div>  
-                            <div class="bubble bubble_primary right">  
-                                <div class="bubble_cont">  
-                                    <div class="plain">  
-                                        <pre>你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐你欠我一顿大餐</pre>  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>  
-                    <div class="message">  
-                        <img class="avatar" src="assets/img/kh.jpg" />  
-                        <div class="content">  
-                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
-                            <div class="bubble bubble_default left">  
-                                <div class="bubble_cont">  
-                                    <div class="plain">  
-                                        <pre>(⊙o⊙)…好吧</pre>  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>  
-                                        <div class="message me">  
-                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
-                        <div class="content">  
-                            <div class="nickname"><span class="time">10:10:08</span></div>  
-                            <div class="bubble bubble_primary right no_arrow">  
-                                <div class="bubble_cont">  
-                                    <div class="picture">  
-                                        <img class="msg-img" src="images/p1.png">  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>  
-                    <div class="message">  
-                        <img class="avatar" src="assets/img/kh.jpg" />  
-                        <div class="content">  
-                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
-                            <div class="bubble bubble_default left">  
-                                <div class="bubble_cont">  
-                                    <div class="plain">  
-                                        <pre>请你吃一个月大餐！</pre>  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div> 
-                                        <div class="message me">  
-                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
-                        <div class="content">  
-                            <div class="nickname"><span class="time">10:10:08</span></div>  
-                            <div class="bubble bubble_primary right no_arrow">  
-                                <div class="bubble_cont">  
-                                    <div class="picture">  
-                                        <img class="msg-img" src="images/p1.png">  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>  
-                    <div class="message">  
-                        <img class="avatar" src="assets/img/kh.jpg" />  
-                        <div class="content">  
-                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
-                            <div class="bubble bubble_default left">  
-                                <div class="bubble_cont">  
-                                    <div class="plain">  
-                                        <pre>请你吃一个月大餐！</pre>  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div> 
-                    <div class="message me">  
-                        <img class="avatar" src="assets/img/avatar-ts-jessie.png" />  
-                        <div class="content">  
-                            <div class="nickname"><span class="time">10:10:08</span></div>  
-                            <div class="bubble bubble_primary right no_arrow">  
-                                <div class="bubble_cont">  
-                                    <div class="picture">  
-                                        <img class="msg-img" src="images/p1.png">  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>  
-                    <div class="message">  
-                        <img class="avatar" src="assets/img/kh.jpg" />  
-                        <div class="content">  
-                            <div class="nickname">客户小甜甜<span class="time">10:12:20</span></div>  
-                            <div class="bubble bubble_default left">  
-                                <div class="bubble_cont">  
-                                    <div class="plain">  
-                                        <pre>请你吃一个月大餐！</pre>  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>  
+<ion-card>
   
-                </div>  
-                <div class="box_ft">   
-                    <div class="box_ft_hd">  
-                        <div class="eaitWrap">  
-                    
-                            <ion-input class="editArea" id="input{{i}}" [(ngModel)]="teststr"   type="text" placeholder="回复内容…" ></ion-input>  
-                        </div>  
-                       
-                    </div>  
-                </div>  
-            </div>  
-        </div>  
-    </div>  
+  <ion-card-content>
+    <ion-card-title style="color: blue;">
+      合同信息
+      </ion-card-title>
 
+    <p >
+      上边描述少打几个字上边描述少打几个字上边描述少打几个字上边描述少打几个字
+    </p>
+  </ion-card-content>
+<img src="assets/img/sl1.png"/>
+</ion-card>
+
+<ion-card>
+ 
+  <ion-card-content>
+    <ion-card-title>
+      商品清单
+      </ion-card-title>
+    <p>
+      上边描述少打几个字
+    </p>
+  </ion-card-content>
+ <img src="assets/img/sl2.png"/>
+</ion-card>
+
+<ion-card>
+  
+  <ion-card-content>
+    <ion-card-title>
+      图纸
+      </ion-card-title>
+    <p>
+      上边描述少打几个字
+    </p>
+  </ion-card-content>
+<img src="assets/img/sl3.png"/>
+</ion-card>
   <!-- <br/> <br/> <br/> <br/> <br/> <br/>
   <div style="  margin-top: 10px;
     margin-left: 10px;">
