--- a/src/pages/test/test1/test1.html
+++ b/src/pages/test/test1/test1.html
@@ -1,25 +1,60 @@
-<!--
-  Generated template for the Test1Page page.
+<div *ngFor="let orderSchedule of orderScheduleList;let i=index;">
+  <ion-card id="ion{{i}}">
+    <a name="ion{{i}}"></a>
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/img/marty-avatar.png">
+      </ion-avatar>
+      <h2>员工小李</h2>
+      <p>做yohome最好的员工</p>
+    </ion-item>
+    <ion-card-content>
+      <p>{{orderSchedule.describe}}</p>
+    </ion-card-content>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <ion-item>
 
-  <ion-navbar>
-    <ion-title class="badge-container">Test1</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="presentToast()">
-        <ion-icon name="search"></ion-icon>
+      <div padding-vertical>
+        <page-select-pic [max]="6" [allowDelete]="false" [allowAdd]="false" [(fileObjList)]="orderSchedule.imgs"></page-select-pic>
+      </div>
+
+
+    </ion-item>
+
+
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-left clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>12 Likes</div>
       </button>
-    </ion-buttons>
-  </ion-navbar>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-left clear small (click)="toScheduleComplaint()">
+        <ion-icon name="text"></ion-icon>
+        <div>投诉</div>
+      </button>
+      </ion-col>
+      <ion-col center text-center>
+        <ion-note>
+          9:30
+        </ion-note>
+      </ion-col>
+    </ion-row>
 
-</ion-header>
+    <div class="cmt-wrap">
+      <div class="cmt-list" *ngFor="let re of orderSchedule.reply">
+        <p><span>{{re.name}}</span>
+          <span *ngIf="re.replyName" (click)="testChange2(i,re.replyName)">回复{{re.replyName}}</span>
+          <span>: </span>{{re.content}}
+        </p>
+      </div>
+      <ion-input id="input{{i}}" [(ngModel)]="teststr" (change)="testChange(i)" type="text" [placeholder]="myplaceholder"></ion-input>
+    </div>
+  </ion-card>
+</div>
 
 
-<ion-content page-test1>
-  <h1>{{i}}</h1>
-
-
-</ion-content>
+<ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
+  <ion-infinite-scroll-content></ion-infinite-scroll-content>
+</ion-infinite-scroll>
