--- a/src/pages/about/customer-service/customer-service.html
+++ b/src/pages/about/customer-service/customer-service.html
@@ -4,7 +4,7 @@
     <ion-title>售后</ion-title>
         <ion-buttons end>
       <button ion-button icon-only (click)="newSchedule()">
-               发表
+               提交
             </button>
     </ion-buttons>
     
@@ -16,7 +16,7 @@
   <div style="  margin-top: 10px;
     margin-left: 10px;">
     <div>
-      <textarea placeholder="进度描述……"  [(ngModel)]="describe"  rows="3">{{describe}}</textarea><hr/>
+      <textarea placeholder="描述……"  [(ngModel)]="describe"  rows="3">{{describe}}</textarea><hr/>
     </div>
 
      <div padding-vertical>
