--- a/src/shared/pic-viewer-component/select-pic.html
+++ b/src/shared/pic-viewer-component/select-pic.html
@@ -3,7 +3,7 @@
     <img src="{{fileObj.thumbPath}}" (click)="viewerPicture(i)">
   </div>
   <div *ngIf="fileObjList.length<max&&allowAdd" >
-    <div class="file">
+    <div class="file" style="background-image:url(assets/img/jiahao.png); ">
       <input name="md-images" type="file" name="" id="" (change)="img_upload($event)">
     </div>
   </div>
