--- a/src/pages/home/schedule-complaint/schedule-complaint.html
+++ b/src/pages/home/schedule-complaint/schedule-complaint.html
@@ -6,45 +6,45 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>投诉</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>投诉</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-    <div class="main">  
-        <div class="main_inner clearfix">  
-            <div class="panel"></div>                   
-            <div id="chatArea" class="box chat">  
-                <div class="box_hd"></div>  
-                <div class="box_bd" id="messageList">  
-                    <div *ngFor="let scheduleComplaint of scheduleComplaintList" [ngClass]="{true:'message me',false:'message'}[scheduleComplaint.msgType]">  
-                        <img class="avatar" src="{{scheduleComplaint.headPortrait}}" />  
-                        <div class="content">  
-                            <div class="nickname"><span class="time">{{scheduleComplaint.dateTime}}</span></div>  
-                            <div [ngClass]="{true:'bubble bubble_primary right',false:'bubble bubble_default left'}[scheduleComplaint.msgType]">  
-                                <div class="bubble_cont">  
-                                    <div class="plain">  
-                                        <pre>{{scheduleComplaint.content}}</pre>  
-                                    </div>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </div>   
+    <div class="main">
+        <div class="main_inner clearfix">
+            <div class="panel"></div>
+            <div id="chatArea" class="box chat">
+                <div class="box_hd"></div>
+                <div class="box_bd" id="messageList">
+                    <div *ngFor="let scheduleComplaint of scheduleComplaintList" [ngClass]="{true:'message me',false:'message'}[scheduleComplaint.msgType]">
+                        <img class="avatar" src="{{scheduleComplaint.headPortrait}}" />
+                        <div class="content">
+                            <div class="nickname"><span class="time">{{scheduleComplaint.dateTime}}</span></div>
+                            <div [ngClass]="{true:'bubble bubble_primary right',false:'bubble bubble_default left'}[scheduleComplaint.msgType]">
+                                <div class="bubble_cont">
+                                    <div class="plain">
+                                        <pre>{{scheduleComplaint.content}}</pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                </div>  
-                <div class="box_ft" style="position: static;">   
-                    <div >  
-                        <div > 
-                            <ion-input (change)="complaintReply($event)" style="transform:translate3d(0px,0px, 0px) scale(1)"  id="input{{i}}" [(ngModel)]="teststr"   type="text" placeholder="回复内容…" ></ion-input>  
-                        </div>  
-                    </div>  
-                </div>  
-            </div>  
-        </div>  
-    </div>  
+                </div>
 
-    
+            </div>
+        </div>
+    </div>
+
+
 </ion-content>
+<ion-footer>
+    <ion-input (change)="complaintReply($event)" [(ngModel)]="replyStr" [(ngModel)]="teststr" (blur)="funBlur()" (focus)="funFocus($event)"
+        placeholder="投诉内容…"></ion-input>
+
+    <button ion-button style="width:100%;height:50px;" disabled="disabled" color="dark">投诉电话：0512-66592866-818</button>
+</ion-footer>
