--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -58,10 +58,12 @@
 
     <ion-row>
       <ion-col>
-        <button ion-button icon-left clear small>
+        </ion-col>
+      <ion-col>
+        <!-- <button ion-button icon-left clear small>
         <ion-icon name="thumbs-up"></ion-icon>
         <div>12 Likes</div>
-      </button>
+      </button> -->
       </ion-col>
     <ion-col> </ion-col><ion-col> </ion-col>
       <ion-col>
