--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,37 +7,34 @@
 </ion-header>
 
 <ion-content class="bg-color">
-  <ion-list>
-    <ion-item >
-      <ion-avatar item-left >
-        <img src="assets/img/avatar-ts-buzz.png">
+
+    <ion-list>
+    <ion-item (click)="edit()">
+      <ion-avatar item-left (click)="viewAvatar($event)">
+        <img src="{{avatarPath}}">
       </ion-avatar>
-      <h2>李硕</h2>
-      <p>word硕</p>
+      <h2>{{userInfo?.name}}</h2>
+      <p>{{userInfo?.description}}</p>
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item>
+<br/>
+    <ion-item (click)="setting()">
       <ion-icon name="settings" item-left color="primary"></ion-icon>
       设置
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item hideWhen="ios">
-	  <ion-icon name="log-out" item-left color="danger"></ion-icon>
-      退出软件
-    </ion-item>
-    <ion-item >
-      <ion-icon name="log-in" item-left color="danger"></ion-icon>
-      重新登录
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item >
-      <ion-icon name="information-circle" item-left  color="secondary"></ion-icon>
-      关于
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
+<br/>
+    <ion-item (click)="edit()">
+      <ion-icon name="log-in" item-left color="danger"></ion-icon>
+      重新登录
+      <ion-icon name='ios-arrow-forward' item-right></ion-icon>
+    </ion-item>
+<br/>
+    <ion-item (click)="about()">
+      <ion-icon name="information-circle" item-left  color="secondary"></ion-icon>
+      关于我们
+      <ion-icon name='ios-arrow-forward' item-right></ion-icon>
+    </ion-item>
+<br/>
   </ion-list>
 </ion-content>
