--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
     <ion-title>{{userOrder.name?userOrder.name:'所有进度'}}</ion-title>
-<!-- <a href="#ion{{cnt}}" (click)="test()">(4)条新消息</a> -->
+    <!-- <a href="#ion{{cnt}}" (click)="test()">(4)条新消息</a> -->
     <ion-buttons end>
       <button ion-button icon-only (click)="newSchedule()">
                 <ion-icon *ngIf="userOrder.name" name="add"></ion-icon>
@@ -23,76 +23,77 @@
 
 
 
-<div *ngFor="let orderSchedule of orderScheduleList;let i=index;">
-  <ion-card id="ion{{i}}">
-<a name="ion{{i}}"></a>
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="assets/img/marty-avatar.png">
-      </ion-avatar>
+  <div *ngFor="let orderSchedule of orderScheduleList;let i=index;">
+    <ion-card id="ion{{i}}">
+      <a name="ion{{i}}"></a>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="assets/img/marty-avatar.png">
+        </ion-avatar>
+
+        <ion-row (click)="toMineEditPage()">
+          <ion-col>
+            <h2>员工小李</h2>
+          </ion-col>
+          <ion-col> </ion-col>
+          <ion-col>
+            <p>2017年8月7日 12:56</p>
+          </ion-col>
+        </ion-row>
+        <p>做yohome最好的员工</p>
+      </ion-item>
+      <ion-card-content>
+        <p>{{orderSchedule.describe}}</p>
+      </ion-card-content>
+
+      <ion-item>
+
+        <div padding-vertical>
+          <page-select-pic [max]="6" [allowDelete]="false" [allowAdd]="false" [(fileObjList)]="orderSchedule.imgs"></page-select-pic>
+        </div>
+
+
+      </ion-item>
+
 
       <ion-row>
         <ion-col>
-      <h2>员工小李</h2>
-      </ion-col>
-               <ion-col> </ion-col>
-            <ion-col>
-      <p>2017年8月7日 12:56</p>
-      </ion-col>
-      </ion-row>
-      <p>做yohome最好的员工</p>
-    </ion-item>
-    <ion-card-content>
-      <p>{{orderSchedule.describe}}</p>
-    </ion-card-content>
-
-    <ion-item>
-
-      <div padding-vertical>
-        <page-select-pic [max]="6" [allowDelete]="false" [allowAdd]="false" [(fileObjList)]="orderSchedule.imgs"></page-select-pic>
-      </div>
-
-
-    </ion-item>
-
-
-    <ion-row>
-      <ion-col>
         </ion-col>
-      <ion-col>
-        <!-- <button ion-button icon-left clear small>
+        <ion-col>
+          <!-- <button ion-button icon-left clear small>
         <ion-icon name="thumbs-up"></ion-icon>
         <div>12 Likes</div>
       </button> -->
-      </ion-col>
-    <ion-col> </ion-col><ion-col> </ion-col>
-      <ion-col>
-        <button ion-button icon-left clear small (click)="toScheduleComplaint()">
+        </ion-col>
+        <ion-col> </ion-col>
+        <ion-col> </ion-col>
+        <ion-col>
+          <button ion-button icon-left clear small (click)="toScheduleComplaint()">
         <ion-icon name="text"></ion-icon>
         <div>投诉</div>
       </button>
-      </ion-col>
-      <ion-col center text-center>
+        </ion-col>
+        <ion-col center text-center>
 
-      </ion-col>
-    </ion-row>
+        </ion-col>
+      </ion-row>
 
-        <div class="cmt-wrap">
-          <div class="cmt-list" *ngFor="let re of orderSchedule.reply">
-            <p><span >{{re.name}}</span>
-              <span *ngIf="re.replyName" (click)="testChange2(i,re.replyName)">回复{{re.replyName}}</span>
-              <span>: </span>{{re.content}}
-            </p>    
-          </div>   
-          <div style="position: static;">          
-          <ion-input  id="input{{i}}" [(ngModel)]="teststr" (change)="testChange(i)"  type="text" [placeholder]="myplaceholder" ></ion-input>
-          </div>    
+      <div class="cmt-wrap">
+        <div class="cmt-list" *ngFor="let re of orderSchedule.reply">
+          <p><span>{{re.name}}</span>
+            <span *ngIf="re.replyName" (click)="testChange2(i,re.replyName)">回复{{re.replyName}}</span>
+            <span>: </span>{{re.content}}
+          </p>
         </div>
-  </ion-card>
+        <div style="position: static;">
+          <ion-input id="input{{i}}" [(ngModel)]="teststr" (change)="testChange(i)" type="text" [placeholder]="myplaceholder"></ion-input>
+        </div>
+      </div>
+    </ion-card>
   </div>
 
 
- <ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
-   <ion-infinite-scroll-content></ion-infinite-scroll-content>
- </ion-infinite-scroll>
+  <ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
