--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -24,15 +24,15 @@
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
 <br/>
-    <ion-item (click)="edit()">
+    <!-- <ion-item (click)="edit()">
       <ion-icon name="log-in" item-left color="danger"></ion-icon>
       重新登录
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
-<br/>
+<br/> -->
     <ion-item (click)="about()">
       <ion-icon name="information-circle" item-left  color="secondary"></ion-icon>
-      关于我们
+      VIP会员福利
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
 <br/>
