--- a/src/pages/contact/we/we.html
+++ b/src/pages/contact/we/we.html
@@ -1,19 +1,20 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>关于我们</ion-title>
+    <ion-title>VIP会员福利</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content>
-  <div padding  align="center" class="logo"><img src="../../../assets/img/logo.jpg"/></div>
-  <ion-list>
-      <ion-item (click)='yohome()'>
-        关于悦家
-      </ion-item>
-      <ion-item (click)='software()' >
-        关于软件
-      </ion-item>
-  </ion-list>
+  <!-- <div padding  align="center" class="logo"><img src="../../../assets/img/logo.jpg"/></div><br/> -->
+  <p>
+①在会员生日当天给客户致电送祝福，并给客户发生日红包<br/>
+②购买悦家出售的产品享受9.8折<br/>
+③免费清洗灯饰一次<br/>
+④免费清洗高静压离子箱一次<br/>
+⑤免费更换影片片源一次<br/>
+⑥参与公司举行的各种活动（采摘、烧烤、户外活动等）<br/>
+⑦会员推荐的朋友可以享受9.8折，会员自己也可以领取3000元的奖励<br/>
+⑧成功为我们推荐客户的会员参加公司的年终答谢晚宴</p>
 </ion-content>
