--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,17 +1,23 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>悦家智能家居</ion-title>
+    <ion-title>
+        <div align="center">
+    <img src="assets/img/logo.png" style="width:70%;"/>
+  </div>
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
+
+  
   <ion-item>
     <ion-label fixed>账号</ion-label>
-    <ion-input type="text" placeholder="请输入账号" #username></ion-input>
+    <ion-input type="text" value="yohome" placeholder="请输入账号" #username></ion-input>
   </ion-item>
   <ion-item>
     <ion-label fixed>密码</ion-label>
-    <ion-input type="password" placeholder="请输入密码" #password></ion-input>
+    <ion-input type="password" value="test" placeholder="请输入密码" #password></ion-input>
   </ion-item>
   <!-- <ion-item no-lines>
     <label item-right>记住密码</label>
